2010-05-05  Takashi Masuda  <masutaka@nifty.com>

	* twittering-mode.el: twittering-jojo-mode の判定ミスを修正。
	(twittering-add-statuses-to-timeline-data): 判定方法を変更した。
	(twittering-jojo-mode-p): new function
	* twittering-mode.el: `twittering-jojo-mode' for each spec is
	correctly referred in order to decide whether to invoke
	`twittering-update-jojo'.
	(twittering-add-statuses-to-timeline-data): correct the condition
	for invoking `twittering-update-jojo'.
	(twittering-jojo-mode-p): new function.

2010-05-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-ask-post): renamed
	`twittering-request-confirmation-on-posting'.

	* twittering-mode.el (twittering-edit-post-status): correct the
	condition for requesting confirmation on posting a status.

2010-05-03  Takashi Masuda  <masutaka@nifty.com>

	* twittering-mode.el: Tweet する時に y-or-n-p で問い合わせを出来る
	ようにした。デフォルトは聞かれない。
	(twittering-ask-post): new variable
	* twittering-mode.el: Add confirmation on posting a status edited
	in pop-up buffer. It is disabled on default.
	(twittering-ask-post): new variable.

	* twittering-mode.el: `V' の補完対象に :direct_messages や :home を
	追加した。
	(twittering-read-timeline-spec-with-completion): dummy-hist に追加。
	* twittering-mode.el: Add some primary timeline specs, such as
	":direct_messages" and ":home", to candidates of completion.
	(twittering-read-timeline-spec-with-completion): add some timeline
	specs to dummy-hist.

2010-05-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-edit-setup-help): generate help
	message by using `substitute-command-keys'.

	* twittering-mode.el: The format specifier "@" can receive the
	time format string, which is used to format the time of
	sufficiently old statuses.
	(twittering-generate-status-formater-base): add new parameter
	'time-format' to the specifier "@".
	(twittering-make-passed-time-string): receive new argument
	`time-format'.

	* twittering-mode.el: Functions for retrieving URLs asynchronously