@@ -1,3 +1,14 @@
+2010-05-05  Tadashi MATSUO  <tad@mymail.twin.jp>
+
+	* twittering-mode.el: Use a dummy buffer to prevent the cursor
+	from moving without intention after invoking `url-retrieve'.
+	(twittering-url-request-dummy-buffer-name): new constant for dummy
+	buffer.
+	(twittering-resolve-url-request): switch to the dummy buffer just
+	after killing the content buffer generated by `url-retrieve'. This
+	prevents multiple threads from having different cursor points for
+	the same buffer.
+
 2010-05-05  Takashi Masuda  <masutaka@nifty.com>
 
 	* twittering-mode.el: twittering-jojo-mode の判定ミスを修正。
